--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Yo!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8" />
+	<link rel="stylesheet" href="styles/style.css" />
+</head>
+<body>
+	<h1>NMA Bot's Super Awesome Framework</h1>
+</body>
+</html>
