Added remaining pieces of baseline framework to project

--- a/index.html
+++ b/index.html
@@ -6,5 +6,110 @@
 </head>
 <body>
 	<h1>NMA Bot's Super Awesome Framework</h1>
+
+	<div class="container">
+
+		<section class="grid-example">
+		    <h2>My Grid</h2>
+		    <div class="row">
+		        <div class="col-1">1</div>
+		        <div class="col-11">11</div>
+		    </div>
+		    <div class="row">
+		        <div class="col-2">2</div>
+		        <div class="col-10">10</div>
+		    </div>
+		    <div class="row">
+		        <div class="col-3">3</div>
+		        <div class="col-9">9</div>
+		    </div>
+		    <div class="row">
+		        <div class="col-4">4</div>
+		        <div class="col-8">8</div>
+		    </div>
+		    <div class="row">
+		        <div class="col-5">5</div>
+		        <div class="col-7">7</div>
+		    </div>
+		    <div class="row">
+		        <div class="col-6">6</div>
+		        <div class="col-6">6</div>
+		    </div>
+		    <div class="row">
+		        <div class="col-5">5</div>
+		        <div class="col-7">7</div>
+		    </div>
+		    <div class="row">
+		        <div class="col-4">4</div>
+		        <div class="col-8">8</div>
+		    </div>
+		    <div class="row">
+		        <div class="col-3">3</div>
+		        <div class="col-9">9</div>
+		    </div>
+		    <div class="row">
+		        <div class="col-2">2</div>
+		        <div class="col-10">10</div>
+		    </div>
+		    <div class="row">
+		        <div class="col-1">1</div>
+		        <div class="col-11">11</div>
+		    </div>
+		</section>
+
+		<section class="type-example">
+			<h2>My Type</h2>
+			<h1>Heading 1</h1>
+			<h2>Heading 2</h2>
+			<h3>Heading 3</h3>
+			<h4>Heading 4</h4>
+			<h5>Heading 5</h5>
+			<h6>Heading 6</h6>
+		</section>
+
+		<section class="form-example">
+			<h2>My Form</h2>
+			<form>
+			  <label>Text</label>
+			  <input type="text" />
+			  <label>Number</label>
+			  <input type="number" />
+			  <label>Tel</label>
+			  <input type="tel" />
+			  <label>URL</label>
+			  <input type="url" />
+			  <label>Email</label>
+			  <input type="email" />
+			  <label>Search</label>
+			  <input type="search" />
+			  <label>Password</label>
+			  <input type="password" />
+			  <label>Checkbox</label>
+			  <input type="checkbox" />
+			  <label>Radio</label>
+			  <input type="radio" name="radio" />
+			  <input type="radio" name="radio" />
+			  <input type="radio" name="radio" />
+			  <label>Textarea</label>
+			  <textarea></textarea>
+			  <label>Select<label>
+			  <select>
+				<option value="1">One</option>
+				<option value="2">Two</option>
+				<option value="3">Three</option>
+				<option value="4">Four</option>
+			  </select>
+			</form>
+		</section>
+
+		<section class="button-example">
+			<h2>Buttons</h2>
+			<a href="#0" class="button">Link</a>
+			<button>Button</button>
+			<input type="button" value="Button">
+			<input type="submit" value="Submit">
+			<input type="reset" value="Reset">
+		</section>
+	</div>
 </body>
 </html>
