--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 		<section class="grid-example">
 		    <h2>My Grid</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget imperdiet enim. Praesent feugiat lacus justo, quis porttitor nisi varius vitae. Donec sodales molestie nisl vel convallis. Cras dignissim est id ipsum venenatis porta. Phasellus fringilla consequat nisl nec varius. Duis tincidunt lacus diam, eget scelerisque nunc dictum at. Nunc rutrum sollicitudin eleifend. Sed interdum metus ac nisl bibendum ultrices. Curabitur id arcu eros.</p>
 		    <div class="row">
 		        <div class="col-1">1</div>
 		        <div class="col-11">11</div>
@@ -59,6 +60,7 @@
 
 		<section class="type-example">
 			<h2>My Type</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget imperdiet enim. Praesent feugiat lacus justo, quis porttitor nisi varius vitae. Donec sodales molestie nisl vel convallis. Cras dignissim est id ipsum venenatis porta. Phasellus fringilla consequat nisl nec varius. Duis tincidunt lacus diam, eget scelerisque nunc dictum at. Nunc rutrum sollicitudin eleifend. Sed interdum metus ac nisl bibendum ultrices. Curabitur id arcu eros.</p>
 			<h1>Heading 1</h1>
 			<h2>Heading 2</h2>
 			<h3>Heading 3</h3>
@@ -69,6 +71,7 @@
 
 		<section class="form-example">
 			<h2>My Form</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget imperdiet enim. Praesent feugiat lacus justo, quis porttitor nisi varius vitae. Donec sodales molestie nisl vel convallis. Cras dignissim est id ipsum venenatis porta. Phasellus fringilla consequat nisl nec varius. Duis tincidunt lacus diam, eget scelerisque nunc dictum at. Nunc rutrum sollicitudin eleifend. Sed interdum metus ac nisl bibendum ultrices. Curabitur id arcu eros.</p>
 			<form>
 			  <label>Text</label>
 			  <input type="text" />
@@ -104,6 +107,7 @@
 
 		<section class="button-example">
 			<h2>Buttons</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget imperdiet enim. Praesent feugiat lacus justo, quis porttitor nisi varius vitae. Donec sodales molestie nisl vel convallis. Cras dignissim est id ipsum venenatis porta. Phasellus fringilla consequat nisl nec varius. Duis tincidunt lacus diam, eget scelerisque nunc dictum at. Nunc rutrum sollicitudin eleifend. Sed interdum metus ac nisl bibendum ultrices. Curabitur id arcu eros.</p>
 			<a href="#0" class="button">Link</a>
 			<button>Button</button>
 			<input type="button" value="Button">
